[gd_scene load_steps=13 format=3 uid="uid://cmsapqa2otjat"]

[ext_resource type="Texture2D" uid="uid://dnya28wwglttn" path="res://assets/graphics/enemies/drone.png" id="1_dil0n"]
[ext_resource type="Script" uid="uid://cxpeiwq2rlhad" path="res://scripts/drone.gd" id="1_knnud"]
[ext_resource type="Shader" uid="uid://bjw2taaqfx34j" path="res://scenes/enemies/drone.gdshader" id="2_xgp3v"]
[ext_resource type="Texture2D" uid="uid://ddo74jh7ftda" path="res://assets/graphics/explosions/explosion_3.png" id="3_dyfay"]
[ext_resource type="AudioStream" uid="uid://uf8gbjlwh1b4" path="res://assets/audio/solid_impact.ogg" id="5_cq5ml"]
[ext_resource type="AudioStream" uid="uid://l3gwp6qkplvk" path="res://assets/audio/explosion.wav" id="6_md0p7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lt60k"]
resource_local_to_scene = true
shader = ExtResource("2_xgp3v")
shader_parameter/colour = Color(0.6674, 0.872486, 0.869952, 1)
shader_parameter/progress = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_knnud"]
radius = 69.7209

[sub_resource type="CircleShape2D" id="CircleShape2D_y3ws1"]
radius = 1119.01

[sub_resource type="Animation" id="Animation_lt60k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Explosion:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DroneImage:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_xgp3v"]
resource_name = "explosion"
length = 1.9
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45, 1.5, 1.55, 1.6, 1.65, 1.7, 1.75, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Explosion:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DroneImage:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.45),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.9),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/4/type = "audio"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Node2D/ExplosionSound")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("6_md0p7")
}],
"times": PackedFloat32Array(0.2)
}
tracks/4/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cq5ml"]
_data = {
&"RESET": SubResource("Animation_lt60k"),
&"explosion": SubResource("Animation_xgp3v")
}

[node name="Drone" type="CharacterBody2D" groups=["Drones", "Entity"]]
collision_layer = 2
collision_mask = 15
script = ExtResource("1_knnud")

[node name="DroneImage" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_lt60k")
rotation = 1.5708
texture = ExtResource("1_dil0n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_knnud")

[node name="Areas" type="Node2D" parent="."]

[node name="NoticeArea" type="Area2D" parent="Areas"]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/NoticeArea"]
shape = SubResource("CircleShape2D_y3ws1")

[node name="Timers" type="Node" parent="."]

[node name="InvulnerableTimer" type="Timer" parent="Timers"]
wait_time = 0.5

[node name="Explosion" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_dyfay")
hframes = 8
vframes = 8
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_cq5ml")
}

[node name="Node2D" type="Node2D" parent="."]

[node name="HitSound" type="AudioStreamPlayer2D" parent="Node2D"]
stream = ExtResource("5_cq5ml")

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="Node2D"]

[connection signal="body_entered" from="Areas/NoticeArea" to="." method="_on_notice_area_body_entered"]
[connection signal="timeout" from="Timers/InvulnerableTimer" to="." method="_on_invulnerable_timer_timeout"]
